--- a/app/src/main/res/layout/user_list_fragment.xml
+++ b/app/src/main/res/layout/user_list_fragment.xml
@@ -6,6 +6,7 @@
     tools:context=".flow.users.UserListFragment">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="User List Fragment" />
