--- a/app/src/main/res/layout/item_post_comment_list.xml
+++ b/app/src/main/res/layout/item_post_comment_list.xml
@@ -4,12 +4,19 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/grey" />
+
     <TextView
         android:id="@+id/comment_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/divider"
         android:layout_alignParentStart="true"
         android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
